--- a/aliases/ansible.yaml
+++ b/aliases/ansible.yaml
@@ -16,3 +16,19 @@ result:
   extra:
     slack:
       color: "{% if execution.result.succeeded %}good{% else %}danger{% endif %}"
+
+name: "chatops.provision_olympia"
+action_ref: "ansible.olympia.provision"
+description: "Run workflow to deploy Olympia"
+formats:
+  - display: "provision olympia"
+result:
+  format: |
+    Ansible command `{{ execution.parameters.args }}` result: {~}
+    {% if execution.result.stderr %}*Stdout:* {% endif %}
+    ```{{ execution.result.stdout }}```
+    {% if execution.result.stderr %}*Stderr:* ```{{ execution.result.stderr }}```{% endif %}
+  extra:
+    slack:
+      color: "{% if execution.result.succeeded %}good{% else %}danger{% endif %}"
+
