--- a/aliases/provision_olympia.yaml
+++ b/aliases/provision_olympia.yaml
@@ -2,7 +2,7 @@ name: "chatops.provision_olympia"
 action_ref: "ansible.provision.olympia"
 description: "Run workflow to provision Olympia"
 formats:
-  - "provision olympia on {{ environ }}"
+  - "provision olympia on {{ project }}"
 result:
   extra:
     slack:
